Fix z-indexing.

--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,7 @@ ul.zone-list li {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1000; /* ensure above card tooltips */
 }
 
 .target-prompt ul {
@@ -185,6 +186,7 @@ ul.zone-list li {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1000; /* ensure above card tooltips */
 }
 
 .game-over > div {
